[package]
name = "prometheus-tokio"
description = "A collection of tokio runtime metrics for prometheus consumption"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/gagbo/rust-prometheus-tokio"
repository = "https://github.com/gagbo/rust-prometheus-tokio"
keywords = ["prometheus", "metrics"]
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.13.3" }
tokio = { version = "1.27" }
tracing = "0.1.37"

[dev-dependencies]
axum = "0.6.12"
tokio = { version = "1.27", features = ["rt", "macros", "rt-multi-thread"]}
tracing-subscriber = "0.3.16"
